-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Testing Infrastructure
-
Fully Compatible
-
ALL
-
Platform A (10/09/15)
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Value returned from a function is not checked for errors before being used
Defect 73709 (STATIC_C)
Checker CHECKED_RETURN (subcategory none)
File: /src/mongo/executor/network_interface_asio.cpp
Function mongo::executor::NetworkInterfaceASIO::startCommand(const mongo::executor::TaskExecutor::CallbackHandle &, const mongo::executor::RemoteCommandRequest &, const std::function<void (const mongo::StatusWith<mongo::executor::RemoteCommandResponse> &)> &)::[lambda(mongo::StatusWith<std::unique_ptr<mongo::executor::ConnectionPool::ConnectionInterface, mongo::executor::ConnectionPool::ConnectionHandleDeleter>>) (instance 1)]::operator ()(mongo::StatusWith<std::unique_ptr<mongo::executor::ConnectionPool::ConnectionInterface, mongo::executor::ConnectionPool::ConnectionHandleDeleter>>) const
/src/mongo/executor/network_interface_asio.cpp, line: 166
Calling "erase" without checking return value (as is done elsewhere 2 out of 3 times).
_inGetConnection.erase(cbHandle);