SERVER-20544 prioritize reporting cancellation over reporting network error if we were canceled before we failed to get a connection from the pool